[package]
name = "opentelemetry-instrumentation-actix-web"
version = "0.24.0"
description = "OpenTelemetry instrumentation for Actix Web apps"
homepage = "https://github.com/open-telemetry/opentelemetry-rust-contrib/tree/main/opentelemetry-instrumentation-actix-web"
repository = "https://github.com/open-telemetry/opentelemetry-rust-contrib/tree/main/opentelemetry-instrumentation-actix-web"
readme = "README.md"
categories = ["api-bindings"]
keywords = ["actix", "actix-web", "opentelemetry"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.75.0"

[features]
default = ["metrics"]
metrics = ["opentelemetry/metrics"]
sync-middleware = []

[dependencies]
actix-http = { version = "3.11", default-features = false, features = [
  "compress-zstd",
] }
actix-web = { version = "4.12", default-features = false, features = [
  "compress-zstd",
] }
awc = { version = "3.8", optional = true, default-features = false, features = [
  "compress-zstd",
] }
futures-util = { version = "0.3", default-features = false, features = [
  "alloc",
] }
opentelemetry = { workspace = true, features = ["trace"] }
opentelemetry-semantic-conventions = { workspace = true, features = [
  "semconv_experimental",
] }
serde = "1.0"
# https://rustsec.org/advisories/RUSTSEC-2026-0009
time = { workspace = true }

[dev-dependencies]
actix-rt = "2"
actix-web = { version = "4.12", features = ["macros"] }
awc = { version = "3.8", default-features = false, features = ["compress-zstd"] }
criterion = { workspace = true, features = ["async_tokio"] }
opentelemetry_sdk = { workspace = true, features = [
  "metrics",
  "trace",
  "testing",
] }
opentelemetry-stdout = { workspace = true, features = ["trace", "metrics"] }
serial_test = "3"
tokio = { version = "1", features = ["rt-multi-thread"] }

[[example]]
name = "client"
required-features = ["awc"]

[[bench]]
name = "middleware"
harness = false
required-features = ["metrics"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
