[package]
name = "opentelemetry-instrumentation-tower"
edition = "2021"
rust-version = "1.75.0"

version = "0.17.0"
license = "Apache-2.0"
description = "OpenTelemetry Middleware for Tower-compatible Rust HTTP servers"
homepage = "https://github.com/open-telemetry/opentelemetry-rust-contrib"
repository = "https://github.com/open-telemetry/opentelemetry-rust-contrib"
documentation = "https://docs.rs/tower-otel-http-metrics"
readme = "README.md"
include = ["src/"]

[features]
default = []
axum = ["dep:axum"]
uuid = ["dep:uuid"]

[dependencies]
axum = { features = ["matched-path", "macros"], version = "0.8", default-features = false, optional = true }
http = { version = "1", features = ["std"], default-features = false }
http-body = { version = "1", default-features = false }
opentelemetry = { workspace = true, features = ["futures", "metrics", "trace"] }
opentelemetry-http = "0.31"
opentelemetry-semantic-conventions = { workspace = true, features = ["semconv_experimental"] }
tower-service = { version = "0.3", default-features = false }
tower-layer = { version = "0.3", default-features = false }
uuid = { version = "1.19", default-features = false, optional = true }

[dev-dependencies]
opentelemetry_sdk = { workspace = true, features = ["metrics", "testing"] }
tokio = { version = "1.0", features = ["macros", "rt"] }
tower = { version = "0.5", features = ["util"] }
tower-test = { version = "0.4" }

[lints]
workspace = true
