[package]
name = "opentelemetry-instrumentation-tower"
edition = "2021"
rust-version = "1.75.0"

version = "0.17.0"
license = "Apache-2.0"
description = "OpenTelemetry Middleware for Tower-compatible Rust HTTP servers"
homepage = "https://github.com/open-telemetry/opentelemetry-rust-contrib"
repository = "https://github.com/open-telemetry/opentelemetry-rust-contrib"
documentation = "https://docs.rs/tower-otel-http-metrics"
readme = "README.md"
include = ["src/", "benches/"]

[features]
default = []
axum = ["dep:axum"]

[dependencies]
axum = { features = ["matched-path", "macros"], version = "0.8", default-features = false, optional = true }
http = { version = "1", features = ["std"], default-features = false }
http-body = { version = "1", default-features = false }
opentelemetry = { workspace = true, features = ["futures", "metrics", "trace"] }
opentelemetry-http = "0.32"
opentelemetry-semantic-conventions = { workspace = true, features = ["semconv_experimental"] }
pin-project-lite = "0.2"
tower-service = { version = "0.3", default-features = false }
tower-layer = { version = "0.3", default-features = false }

[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio"] }
http-body-util = { version = "0.1", default-features = false }
opentelemetry-proto = { workspace = true, features = ["gen-tonic", "trace"] }
opentelemetry_sdk = { workspace = true, features = ["metrics", "trace", "testing"] }
tokio = { version = "1.0", features = ["macros", "net", "rt", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { version = "0.14.1", default-features = false, features = ["router", "transport"] }
tower = { version = "0.5", features = ["util"] }
tower-test = { version = "0.4" }

[[bench]]
name = "middleware"
harness = false

[lints]
workspace = true
