[package]
name = "opentelemetry-journald-logs"
version = "0.1.0"
edition = "2021"
keywords = ["opentelemetry", "journald", "logs", "tracing"]
description = "OpenTelemetry logs exporter for journald"
repository = "https://github.com/open-telemetry/opentelemetry-rust-contrib/tree/main/opentelemetry-journald-logs"
homepage = "https://github.com/open-telemetry/opentelemetry-rust-contrib/tree/main/opentelemetry-journald-logs"
license = "Apache-2.0"

[dependencies]
opentelemetry = { workspace = true, features = ["logs"] }
opentelemetry_sdk = { workspace = true, features = ["logs"] }
libc = "0.2"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"], optional =true}
serde_json = {version = "1.0", optional = true}

[dev-dependencies]
opentelemetry-appender-tracing = { workspace = true }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-core = "0.1.31"
tracing-subscriber = { version = "0.3.0", default-features = false, features = ["registry", "std"] }

[features]
logs_level_enabled = ["opentelemetry/logs_level_enabled", "opentelemetry_sdk/logs_level_enabled"]
default = ["logs_level_enabled"]
json = ["serde", "serde_json"]