[package]
name = "opentelemetry-macros"
version = "0.3.0"
edition = "2021"
description = "A collection of community supported macros for OpenTelemetry"
homepage = "https://github.com/open-telemetry/opentelemetry-rust-contrib/tree/main/opentelemetry-macros"
repository = "https://github.com/open-telemetry/opentelemetry-rust-contrib/tree/main/opentelemetry-macros"
readme = "README.md"
keywords = ["opentelemetry", "resource", "detector"]
license = "Apache-2.0"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0.72", features = ["full"]}

[lib]
proc-macro = true

[[test]]
name = "unitary_tests"
path = "tests/unitary/mod.rs"



