[package]
name = "opentelemetry-resource-detectors"
version = "0.10.0"
edition = "2021"
description = "A collection of community supported resource detectors for OpenTelemetry"
homepage = "https://github.com/open-telemetry/opentelemetry-rust-contrib/tree/main/opentelemetry-resource-detectors"
repository = "https://github.com/open-telemetry/opentelemetry-rust-contrib/tree/main/opentelemetry-resource-detectors"
readme = "README.md"
keywords = ["opentelemetry", "resource", "detector"]
license = "Apache-2.0"
rust-version = "1.75.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }

[dev-dependencies]
temp-env = "0.3.6"

[lints]
workspace = true
