[package]
name = "opentelemetry-stackdriver"
version = "0.22.0"
description = "A Rust opentelemetry exporter that uploads traces to Google Stackdriver trace."
documentation = "https://docs.rs/opentelemetry-stackdriver/"
repository = "https://github.com/open-telemetry/opentelemetry-rust-contrib"
license = "Apache-2.0"
edition = "2021"
exclude = ["/proto"]
rust-version = "1.65"

[dependencies]
async-trait = "0.1.48"
gcp_auth = { version = "0.12", optional = true }
hex = "0.4"
http = "1"
opentelemetry = {workspace = true}
opentelemetry_sdk = { workspace = true, features = ["trace"] }
opentelemetry-semantic-conventions = { workspace = true}
prost = "0.13"
prost-types = "0.13"
thiserror = "1.0.30"
tonic = { version = "0.12", features = ["gzip", "tls", "transport"] }
once_cell = { version = "1.19", optional = true }

# Futures
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
futures-channel = { version = "0.3", default-features = false, features = ["std"] }

[features]
default = ["gcp-authorizer", "tls-native-roots"]
gcp-authorizer = ["dep:gcp_auth"]
tls-native-roots = ["tonic/tls-roots"]
tls-webpki-roots = ["tonic/tls-webpki-roots"]
propagator = ["once_cell"]

[dev-dependencies]
reqwest = "0.12"
tempfile = "3.3.0"
tokio = "1"
tonic-build = "0.12"
walkdir = "2.3.2"
futures-util = { version = "0.3", default-features = false }
opentelemetry = { workspace = true, features = ["testing"] }
