[package]
name = "opentelemetry-stackdriver"
version = "0.26.0"
description = "A Rust opentelemetry exporter that uploads traces to Google Stackdriver trace."
documentation = "https://docs.rs/opentelemetry-stackdriver/"
repository = "https://github.com/open-telemetry/opentelemetry-rust-contrib"
license = "Apache-2.0"
edition = "2021"
exclude = ["/proto"]
rust-version = "1.75.0"

[dependencies]
gcp_auth = { version = "0.12", optional = true }
hex = "0.4"
http = "1"
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["trace"] }
opentelemetry-semantic-conventions = { workspace = true }
prost = "0.13"
prost-types = "0.13"
thiserror = "2.0"
tonic = { version = "0.13", default-features = false, features = ["channel", "codegen", "gzip", "prost"] }
tracing = { version = "0.1", optional = true }

# Futures
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
futures-channel = { version = "0.3", default-features = false, features = ["std"] }

[features]
default = ["gcp-authorizer", "tls-native-roots", "internal-logs"]
gcp-authorizer = ["dep:gcp_auth"]
tls-ring = ["tonic/tls-ring"]
tls-native-roots = ["tonic/tls-native-roots"]
tls-webpki-roots = ["tonic/tls-webpki-roots"]
propagator = []
internal-logs = ["tracing"]

[dev-dependencies]
reqwest = "0.12"
tempfile = "3.3.0"
tokio = { version = "1.0", features = ["macros", "rt"] }
tonic-build = "0.13"
walkdir = "2.3.2"
futures-util = { version = "0.3", default-features = false }
opentelemetry = { workspace = true, features = ["testing"] }

[package.metadata.cargo-machete]
ignored = ["tracing"]

[lints]
workspace = true
