[package]
name = "opentelemetry-user-events-logs"
description = "OpenTelemetry Logs Exporter for Linux user_events"
version = "0.13.0"
edition = "2021"
homepage = "https://github.com/open-telemetry/opentelemetry-rust-contrib/tree/main/opentelemetry-user-events-logs"
repository = "https://github.com/open-telemetry/opentelemetry-rust-contrib/tree/main/opentelemetry-user-events-logs"
readme = "README.md"
rust-version = "1.75.0"
keywords = ["opentelemetry", "log", "trace", "user_events"]
license = "Apache-2.0"

[dependencies]
eventheader = "0.4.0"
eventheader_dynamic = "0.4.0"
opentelemetry = { version= "0.30", features = ["logs"] }
opentelemetry_sdk = { version= "0.30", features = ["logs"] }
chrono = { version = "0.4", default-features = false, features = ["std"] }
tracing = { version = "0.1", optional = true }
futures-executor = "0.3"

[dev-dependencies]
opentelemetry-appender-tracing = { version= "0.30" }
opentelemetry_sdk = { version= "0.30", features = ["logs", "trace"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-core = "0.1.31"
tracing-subscriber = { version = "0.3.0", default-features = false, features = ["env-filter", "fmt", "registry", "std"] }
ctrlc = "3.4"
criterion = "0.5"
serde_json = "1.0.140"

[features]
spec_unstable_logs_enabled = ["opentelemetry/spec_unstable_logs_enabled", "opentelemetry_sdk/spec_unstable_logs_enabled", "opentelemetry-appender-tracing/spec_unstable_logs_enabled"]
internal-logs = ["tracing", "opentelemetry/internal-logs", "opentelemetry_sdk/internal-logs"]
default = ["internal-logs"]

[[bench]]

name = "logs"
harness = false
required-features = ["spec_unstable_logs_enabled"]

[lints]
workspace = true
