[package]
name = "opentelemetry-user-events-logs"
description = "OpenTelemetry Logs Exporter for Linux user_events"
version = "0.16.0"
edition = "2021"
homepage = "https://github.com/open-telemetry/opentelemetry-rust-contrib/tree/main/opentelemetry-user-events-logs"
repository = "https://github.com/open-telemetry/opentelemetry-rust-contrib/tree/main/opentelemetry-user-events-logs"
readme = "README.md"
rust-version = "1.75.0"
keywords = ["opentelemetry", "log", "trace", "user_events"]
license = "Apache-2.0"

[dependencies]
eventheader = "0.5.0"
eventheader_dynamic = "0.5.0"
opentelemetry = { workspace = true, features = ["logs"] }
opentelemetry_sdk = { workspace = true, features = ["logs"] }
chrono = { version = "0.4", default-features = false, features = ["std"] }

[dev-dependencies]
opentelemetry-appender-tracing = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["logs", "trace"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-core = "0.1.31"
tracing-subscriber = { version = "0.3.0", default-features = false, features = ["env-filter", "fmt", "registry", "std"] }
ctrlc = "3.4"
criterion = "0.8"
serde_json = "1.0.140"

# Linux-only: in-process user_events consumer/decoder used by the integration
# tests to read EventHeader events directly from the perf ring buffer
# (`one_collect`) and decode them (`tracepoint_decode`), instead of shelling out
# to `perf record` + `perf-decode`.
[target.'cfg(target_os = "linux")'.dev-dependencies]
one_collect = "0.1.34532"
tracepoint_decode = "0.5.0"

[features]
internal-logs = ["opentelemetry/internal-logs", "opentelemetry_sdk/internal-logs"]
experimental_eventname_callback = []
default = ["internal-logs"]

[[bench]]

name = "logs"
harness = false
required-features = ["experimental_eventname_callback"]

[lints]
workspace = true
