[package]
name = "opentelemetry-user-events-metrics"
version = "0.12.0"
description = "OpenTelemetry metrics exporter to user events"
homepage = "https://github.com/open-telemetry/opentelemetry-rust-contrib/tree/main/opentelemetry-user-events-metrics"
repository = "https://github.com/open-telemetry/opentelemetry-rust-contrib/tree/main/opentelemetry-user-events-metrics"
readme = "README.md"
keywords = ["opentelemetry", "metrics", "user-events"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.75.0"

[dependencies]
opentelemetry = { version= "0.31", features = ["metrics"] }
opentelemetry_sdk = { version= "0.31", features = ["metrics"] }
opentelemetry-proto = { version= "0.31", features = ["gen-tonic", "metrics"], default-features = false }
eventheader = { version = "= 0.5.0" }
prost = "0.14"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter","registry", "std", "fmt"] }
serde_json = "1.0"

[features]
internal-logs = ["opentelemetry/internal-logs", "opentelemetry_sdk/internal-logs", "opentelemetry-proto/internal-logs"]
default = ["internal-logs"]

[package.metadata.cargo-machete]
ignored = ["tracing"]

[lints]
workspace = true
