[package]
name = "opentelemetry-user-events-metrics"
version = "0.13.0"
description = "OpenTelemetry metrics exporter to user events"
homepage = "https://github.com/open-telemetry/opentelemetry-rust-contrib/tree/main/opentelemetry-user-events-metrics"
repository = "https://github.com/open-telemetry/opentelemetry-rust-contrib/tree/main/opentelemetry-user-events-metrics"
readme = "README.md"
keywords = ["opentelemetry", "metrics", "user-events"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.75.0"

[dependencies]
opentelemetry = { workspace = true, features = ["metrics"] }
opentelemetry_sdk = { workspace = true, features = ["metrics"] }
opentelemetry-proto = { workspace = true, features = ["gen-tonic", "metrics"] }
eventheader = { version = "= 0.5.0" }
prost = "0.14"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter","registry", "std", "fmt"] }

# Linux-only: in-process user_events consumer used by the integration tests to
# read the `otlp_metrics` tracepoint directly from the perf ring buffer instead
# of shelling out to `perf record` + `perf-decode`.
[target.'cfg(target_os = "linux")'.dev-dependencies]
one_collect = "0.1.34532"

[features]
internal-logs = ["opentelemetry/internal-logs", "opentelemetry_sdk/internal-logs", "opentelemetry-proto/internal-logs"]
default = ["internal-logs"]

[package.metadata.cargo-machete]
ignored = ["tracing"]

[lints]
workspace = true
