[package]
name = "opentelemetry-zpages"
version = "0.7.0"
description = "ZPages implementation for OpenTelemetry"
homepage = "https://github.com/open-telemetry/opentelemetry-rust-contrib/tree/main/opentelemetry-zpages"
repository = "https://github.com/open-telemetry/opentelemetry-rust-contrib/tree/main/opentelemetry-zpages"
readme = "README.md"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "asynchronous",
]
keywords = ["opentelemetry", "zipkin", "tracing", "async"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.65"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true, default-features = false, features = ["trace"] }
opentelemetry-proto = { workspace = true, features = ["zpages", "gen-tonic", "with-serde"], default-features = false }
async-channel = "1.6"
futures-channel = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
serde =  { version = "1.0", optional = true}
serde_json = { version = "1.0", optional =  true}

[features]
with-serde = ["serde", "serde_json"]

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt"] }
opentelemetry_sdk = { workspace = true, features = ["trace", "testing"] }
rand = "0.8"
hyper = { version = "0.14", features = ["full"] }

[[example]]
name = "zpages"
path = "examples/zpages.rs"
