[package]
name = "opentelemetry-zpages"
version = "0.14.0+deprecated"
description = "[DEPRECATED] ZPages implementation for OpenTelemetry"
homepage = "https://github.com/open-telemetry/opentelemetry-rust-contrib/tree/main/opentelemetry-zpages"
repository = "https://github.com/open-telemetry/opentelemetry-rust-contrib/tree/main/opentelemetry-zpages"
readme = "README.md"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
    "asynchronous",
]
keywords = ["opentelemetry", "zipkin", "tracing", "async"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.75.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
with-serde = []

[dependencies]
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true, default-features = false, features = ["trace", "experimental_async_runtime" ] }
opentelemetry-proto = { workspace = true, features = ["zpages", "gen-tonic", "with-serde"], default-features = false }
async-channel = "2.3"
futures-channel = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt"] }
opentelemetry_sdk = { workspace = true, features = ["trace", "testing"] }
rand = "0.9"
hyper = { version = "0.14", features = ["full"] }

[[example]]
name = "zpages"
path = "examples/zpages.rs"

[lints]
workspace = true
