[package]
name = "stress"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "eventheader"
path = "src/eventheader.rs"
doc = false

[[bin]]
name = "user_events"
path = "src/user_events.rs"
doc = false

[[bin]]
name = "etw"
path = "src/etw_logs.rs"
doc = false

[dependencies]
ctrlc = "3.2.5"
lazy_static = "1.4.0"
num_cpus = "1.15.0"
num-format = "0.4.4"
sysinfo = { version = "0.32", optional = true }
eventheader_dynamic = "0.4.0"

opentelemetry-appender-tracing = { workspace = true, features= ["spec_unstable_logs_enabled"] }
opentelemetry_sdk = { workspace = true, features = ["logs", "spec_unstable_logs_enabled"] }
opentelemetry-user-events-logs = { path = "../opentelemetry-user-events-logs", features = ["spec_unstable_logs_enabled"]}
opentelemetry-etw-logs = { path = "../opentelemetry-etw-logs"}
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.0", default-features = false, features = ["env-filter","registry", "std"] }

[features]
stats = ["sysinfo"]

[profile.release]
debug = true

[lints]
workspace = true
