[package]
name = "tracing_test"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "tracing_test"
path = "src/main.rs"
doc = false

[dependencies]
opentelemetry-appender-tracing = { workspace = true, features= ["spec_unstable_logs_enabled"] }
opentelemetry_sdk = { workspace = true, features = ["logs", "spec_unstable_logs_enabled"] }
opentelemetry-etw-logs = { path = "../opentelemetry-etw-logs"}
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.0", default-features = false, features = ["env-filter","registry", "std"] }

[lints]
workspace = true
