[package]
name = "opentelemetry-c-sdk"
description = "Rust-backed C SDK for OpenTelemetry traces (OTLP exporter, batch processor) that installs into the C API's global provider"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
homepage = "https://github.com/open-telemetry/opentelemetry-rust-contrib/tree/main/opentelemetry-c/sdk"
repository = "https://github.com/open-telemetry/opentelemetry-rust-contrib/tree/main/opentelemetry-c/sdk"
keywords = ["opentelemetry", "tracing", "ffi", "c", "otlp"]
categories = ["development-tools::debugging", "api-bindings"]
license = "Apache-2.0"

# The SDK library. C consumers link this PLUS `libopentelemetry_c_api`; the SDK cdylib
# links against the API cdylib to call its registration ABI (see build.rs).
[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
opentelemetry-c-abi = { path = "../abi" }
opentelemetry = { workspace = true, features = ["trace"] }
opentelemetry_sdk = { workspace = true, features = ["trace"] }
# The OTLP HTTP/protobuf trace exporter is an OPTIONAL exporter implementation, not SDK core.
# It is enabled by default (via the `otlp`/TLS features below) but the SDK core — builder,
# batch span processor, and the generic exporter/processor handles — builds without it.
opentelemetry-otlp = { workspace = true, optional = true, features = [
    "trace",
    "http-proto",
    "reqwest-blocking-client",
] }
# Optional direct dependency used only to select the OTLP blocking HTTP client's TLS backend
# via this crate's `native-tls` / `rustls-tls` features. Pulled in only with the `otlp`
# feature; the exporter is driven through opentelemetry-otlp — this crate never calls reqwest.
reqwest = { version = "0.13", optional = true, default-features = false, features = [
    "blocking",
] }

[dev-dependencies]
opentelemetry_sdk = { workspace = true, features = ["trace", "testing"] }
# The SDK-backed hot-path benchmark drives the real C API entrypoints (global provider
# slot, span/tracer ops). Linking the API rlib here also resolves this crate's `api_ffi`
# extern `otel_api_*` imports for the bench binary. Benchmark/test only — never a runtime dep.
opentelemetry-c-api = { path = "../api" }
criterion = { workspace = true }

[[bench]]
name = "sdk_hotpath"
harness = false
# Builds a real OTLP exporter, so it requires the `otlp` feature (in default features). This
# keeps `cargo bench --no-default-features` from trying to compile a bench that cannot work.
required-features = ["otlp"]

[features]
# Default preserves today's experience: the OTLP HTTP/protobuf exporter with OS/platform TLS.
default = ["native-tls"]
# The OTLP HTTP/protobuf trace exporter (optional). Disabling it (`--no-default-features`)
# drops `opentelemetry-otlp`, `reqwest`, and all TLS backends; the SDK core still builds and
# the `otel_otlp_trace_exporter_builder_*` symbols remain, returning OTEL_STATUS_INVALID_CONFIG.
otlp = ["dep:opentelemetry-otlp", "dep:reqwest"]
# TLS backend for the OTLP blocking HTTP client (only meaningful with `otlp`, which each
# implies). For reqwest 0.13 the correct feature names are `native-tls` and `rustls`.
native-tls = ["otlp", "reqwest/native-tls"]
rustls-tls = ["otlp", "reqwest/rustls"]

[lints]
workspace = true
